tests/expectations/compiler/const_generics/external_struct_fail.out
Error [EPAR0370005]: expected ')', ',', '?' -- found '::'
    --> compiler-test:5:38
     |
   5 |     transition main(c: child.aleo/Bar::[4]) {
     |                                      ^^
